--- a/app/static/style.css
+++ b/app/static/style.css
@@ -120,7 +120,7 @@ body {
   padding: 2rem;
   background-color: #ffffffcc;
   border-radius: 12px;
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);*/
   font-family: 'Konkhmer Sleokchher', cursive;
 }
 
