--- a/app/templates/meersburg.html
+++ b/app/templates/meersburg.html
@@ -1,4 +1,4 @@
-<!-- templates/main.html -->
+<!-- templates/meersburg.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -35,7 +35,7 @@
     </div>
     <!-- RSVP -->
     <div class="section">
-        <a href="{{ url_for('main.antwort') }}" class="rsvp-button">💌RSVP HERE💌</a>
+        <a href="{{ url_for('app.antwort') }}" class="rsvp-button">💌RSVP HERE💌</a>
     </div>
     <!-- Geschenke -->
     <div class="section">
