--- a/app/templates/zusage.html
+++ b/app/templates/zusage.html
@@ -26,7 +26,7 @@
     <div class="hero">
         <img src="{{ url_for('static', filename='RuG.png') }}" alt="Top Bild">
     </div>
-    <form method="POST" action="{{ url_for('main.antwort') }}" class="rsvp-form">
+    <form method="POST" action="{{ url_for('app.antwort') }}" class="rsvp-form">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" name="name" id="name" required>
