--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,17 @@ a {
   color: #000;
 }
 
+.logout-bttn{
+  position:left;
+  width: auto;
+  padding: 2px 5px 2px 5px;
+  background-color: #fff;
+  border-radius: 20%;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  /*z-index: 1000;*/
+  text-decoration: none;
+  font-size: 0.7rem;
+}
 #musik-toggle {
   position: fixed;
   bottom: 20px;
@@ -74,6 +85,22 @@ a {
 .section p {
   /*margin: 1rem 0;*/
   font-size: 1.25rem;
+}
+
+.section-mrb {
+  /*padding: 2rem 5px 6rem 5px;*/
+  max-width: 800px;
+  transform: translateY(40px);
+  animation: fadeInUp 0.8s ease-out forwards;
+  font-size:12px;
+  font-family: 'Konkhmer Sleokchher';
+  font-style: normal;
+  color: #000000;
+  }
+
+.section-mrb p {
+  /*margin: 1rem 0;*/
+  font-size:10px;
 }
 
 .names {
