--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -38,7 +38,7 @@
       MITTAGESSEN IN DER GUTSSCHÄNKE MEERSBURG.<br><br>
       AB 16:00 UHR SOIREE<br>
       00:00 ENDE. <br>
-      DRESSCODE: CHIC<br><br></p>
+      DRESSCODE: CHIC - NICHT FORMELL<br><br></p>
       <strong>24.05.2025 (OPTIONAL)</strong><br>
       <p>14:00 UHR <br>
       BODENSEERUNDFAHRT<br>
