--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
   <div class="container text-center">
     <div class="row justify-content-center">
       <div class="col-md-4">
-        <h2 class="mb-4">🔐 Hochzeit Login</h2>
+        <h2 class="mb-4">Rebecca & Georg</h2>
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
             {% for category, message in messages %}
