--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -29,10 +29,11 @@
 
     <!-- Ablauf -->
     <div class="section-mrb">
+      <h1>Ablauf</h1>
       <strong>23.05.2025</strong> <br>
       <p>12:00 UHR<br>
-      STANDESAMTLICHE TRAUUNG IM NEUEN SCHLOSS MEERSBURG, SCHLOSSPLATZ 12,<br>
-      88709 MEERSBURG– RAUM SCHÖNBORN.<br><br>
+      STANDESAMTLICHE TRAUUNG IM NEUEN SCHLOSS MEERSBURG,<br>
+      SCHLOSSPLATZ 12, 88709 MEERSBURG <br>RAUM SCHÖNBORN.<br><br>
       13:30 UHR<br>
       EMPFANG UND <br>
       MITTAGESSEN IN DER GUTSSCHÄNKE MEERSBURG.<br><br>
