--- a/templates/main.html
+++ b/templates/main.html
@@ -24,7 +24,7 @@
   <div class="bisous-top"><strong>BISOUS</strong></div>
   <!--Hero GIF-->
   <div class="hero">
-      <img src="{{ url_for('static', filename='RuG.png') }}" alt="Top Bild">
+      <img src="{{ url_for('static', filename='RuG.gif') }}" alt="Top Bild">
   </div>
     <!-- Begrüßung -->
   <div class="section">
