--- a/static/style.css
+++ b/static/style.css
@@ -231,3 +231,20 @@ a {
   padding-bottom: 0;
   max-height: 0;
   }
+
+  .map-wrapper {
+    border: 1px solid transparent;
+    border-radius: 10px;
+    padding: 10px;
+    /*margin-bottom: 1.5rem;*/
+    transition: border 0.3s ease;
+  }
+  
+  .map-wrapper.active {
+    border-color: #000000;
+  }
+  
+  .address-toggle {
+    cursor: pointer;
+  }
+  
