--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -29,31 +29,21 @@
 
     <!-- Ablauf -->
     <div class="section-mrb">
-      <h1>Ablauf</h1>
+      <p><br><br>WIR FREUEN UNS RIESIG AUF EUCH!</p><br>
+      <h1>AGENDA</h1>
       <strong>23.05.2025</strong> <br>
       <p>12:00 UHR<br>
-      <section id="trauung">
-        <div id="map1-wrapper" class="map-wrapper">
-          <div class="address-toggle" onclick="toggleMap('map1')" style="cursor: pointer;" id="map1-wrapper">STANDESAMTLICHE TRAUUNG IM NEUEN SCHLOSS MEERSBURG,<br>
-          SCHLOSSPLATZ 12, 88709 MEERSBURG <br>RAUM SCHÖNBORN.<br><br>
-            <div id="map1" class="map-container collapsed">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2685.528381942147!2d9.269701375733698!3d47.69357838196807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479af8657a60569f%3A0x2f7f0a1765ad19ff!2sNeues%20Schloss%20Meersburg!5e0!3m2!1sde!2sit!4v1744611817340!5m2!1sde!2sit" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-          </div>
-        </div>
-      </section>
+      🤍STANDESAMTLICH TRAUUNG🤍<br>
+      SCHLOSSPLATZ 12<br> 88709 MEERSBURG <br>RAUM SCHÖNBORN.<br><br>
       13:30 UHR<br>
-      EMPFANG UND <br>
-      MITTAGESSEN IN DER GUTSSCHÄNKE MEERSBURG.<br><br>
-      <section id="soiree">
-        <div class="map-wrapper" onclick="toggleMap('map2')" style="cursor: pointer;" id="map2-wrapper">AB 16:00 UHR SOIREE IN DER VILLA AM SEE<br>
-        UNTERUHLDINGER STR. 45, 88709 MEERSBURG<br>
-          <div id="map2" class="map-container collapsed">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3286.051160048004!2d9.238528090320365!3d47.712284170592696!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479a57ff77c07b79%3A0xdc42bc77f55e57c5!2sUnteruhldinger%20Str.%2045%2C%2088709%20Meersburg!5e0!3m2!1sde!2sde!4v1745159728688!5m2!1sde!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-        </div>
-      </section>
+      EMPFANG & MITTAGESSEN<br>
+      GUTSSCHÄNKE MEERSBURG.<br>
+      SEMINARSTRASSE 4<br><br>
+      AB 16:00 UHR <br>SOIREE <br> VILLA AM SEE<br>
+      UNTERUHLDINGER STR. 45<br> 88709 MEERSBURG<br><br>
       DRESSCODE: CHIC - NICHT FORMELL<br><br></p>
+    ___________________________________________
+    <br><br></p>
       <strong>24.05.2025 (OPTIONAL)</strong><br>
       <p>14:00 UHR <br>
       BODENSEERUNDFAHRT<br>
@@ -84,8 +74,6 @@
     function toggleMap(mapId) {
       const map = document.getElementById(mapId);
       const wrapper = document.getElementById(mapId + "-wrapper");
-  
-      console.log("TOGGLE:", mapId, "->", wrapper); // Debug!
   
       map.classList.toggle("collapsed");
       wrapper.classList.toggle("active");
