--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -42,7 +42,7 @@
       AB 16:00 UHR <br>SOIREE <br> VILLA AM SEE<br>
       UNTERUHLDINGER STR. 45<br> 88709 MEERSBURG<br><br>
       DRESSCODE: CHIC - NICHT FORMELL<br><br></p>
-    ___________________________________________
+    <hr style="border-color: rgb(0, 0, 0);">
     <br><br></p>
       <strong>24.05.2025 (OPTIONAL)</strong><br>
       <p>14:00 UHR <br>
