--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -29,7 +29,7 @@
 
     <!-- Ablauf -->
     <div class="section-mrb">
-      <p><br><br>WIR FREUEN UNS RIESIG AUF EUCH!</p><br>
+      <p><br><br>WIR FREUEN UNS RIESIG AUF DICH!</p><br>
       <h1>AGENDA</h1>
       <strong>23.05.2025</strong> <br>
       <p>12:00 UHR<br>
