--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -29,7 +29,7 @@
 
     <!-- Ablauf -->
     <div class="section-mrb">
-      <p><br><br>WIR FREUEN UNS RIESIG AUF EUCH!</p><br>
+      <p><br><br>WIR FREUEN UNS RIESIG AUF DICH!</p><br>
       <h1>AGENDA</h1>
       <strong>23.05.2025</strong> <br>
       <p>12:00 UHR<br>
@@ -37,7 +37,7 @@
       SCHLOSSPLATZ 12<br> 88709 MEERSBURG <br>RAUM SCHÖNBORN.<br><br>
       13:30 UHR<br>
       EMPFANG & MITTAGESSEN<br>
-      GUTSSCHÄNKE MEERSBURG.<br>
+      GUTSSCHÄNKE MEERSBURG<br>
       SEMINARSTRASSE 4<br><br>
       AB 16:00 UHR <br>SOIREE <br> VILLA AM SEE<br>
       UNTERUHLDINGER STR. 45<br> 88709 MEERSBURG<br><br>
@@ -46,8 +46,7 @@
     <br><br></p>
       <strong>24.05.2025 (OPTIONAL)</strong><br>
       <p>14:00 UHR <br>
-      BODENSEERUNDFAHRT<br>
-      ODER MUSEUMSBESUCH TBC.<br><br>
+      BODENSEERUNDFAHRT ODER MUSEUMSBESUCH TBC.<br><br>
       18:00 UHR<br>
       GEMEINSAMES ABENDESSEN (DETAILS BEI ANKUNFT)</p>
     </div>
