--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -34,13 +34,13 @@
       <strong>23.05.2025</strong> <br>
       <p>12:00 UHR<br>
       🤍STANDESAMTLICH TRAUUNG🤍<br>
-      SCHLOSSPLATZ 12<br> 88709 MEERSBURG <br>RAUM SCHÖNBORN.<br><br>
+      SCHLOSSPLATZ 12, 88709 MEERSBURG <br>RAUM SCHÖNBORN.<br><br>
       13:30 UHR<br>
       EMPFANG & MITTAGESSEN<br>
       GUTSSCHÄNKE MEERSBURG<br>
       SEMINARSTRASSE 4<br><br>
-      AB 16:00 UHR <br>SOIREE <br> VILLA AM SEE<br>
-      UNTERUHLDINGER STR. 45<br> 88709 MEERSBURG<br><br>
+      AB 16:00 UHR <br>SOIRÉE <br> VILLA AM SEE<br>
+      UNTERUHLDINGER STR. 45, 88709 MEERSBURG<br><br>
       DRESSCODE: CHIC - NICHT FORMELL<br><br></p>
     <hr style="border-color: rgb(0, 0, 0);">
     <br><br></p>
