--- a/templates/500.html
+++ b/templates/500.html
@@ -19,6 +19,12 @@
 <body>
   <h1>500 – Serverfehler</h1>
   <p>Wir bereiten gerade ein paar schöne Momente für dich vor… bitte versuch’s später nochmal. 💐</p>
+  {% if error %}
+  <pre style="color:#b00; font-size:0.9em; margin-top:2em;">
+    {{ error }}
+  </pre>
+{% endif %}
+
   <p><a href="/">Zurück zur Startseite</a></p>
 </body>
 </html>
