--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -51,7 +51,7 @@
       GEMEINSAMES ABENDESSEN (DETAILS BEI ANKUNFT)</p>
     </div>
 
-  <button id="musik-toggle" onclick="toggleMusik()">🔊</button>
+  <button id="musik-toggle" onclick="toggleMusik()">🎶</button>
   <div class="logout-bttn"><a href="{{ url_for('logout') }}">Logout</a></div>
   <script>
       // Musik ein-/ausschalten
