--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -24,7 +24,7 @@
   <div class="bisous-top"><strong>BISOUS</strong></div>
   <!--Hero GIF-->
   <div class="hero">
-      <img src="{{ url_for('static', filename='RuG.png') }}" alt="Top Bild">
+      <img src="{{ url_for('static', filename='GIF.gif') }}" alt="Top Bild">
   </div>
 
     <!-- Ablauf -->
@@ -33,8 +33,8 @@
       <h1>AGENDA</h1>
       <strong>23.05.2025</strong> <br>
       <p>12:00 UHR<br>
-      🤍STANDESAMTLICH TRAUUNG🤍<br>
-      SCHLOSSPLATZ 12, 88709 MEERSBURG <br>RAUM SCHÖNBORN.<br><br>
+      🤍STANDESAMTLICHE TRAUUNG🤍<br>
+      SCHLOSSPLATZ 12, 88709 MEERSBURG <br>RAUM SCHÖNBORN<br><br>
       13:30 UHR<br>
       EMPFANG & MITTAGESSEN<br>
       GUTSSCHÄNKE MEERSBURG<br>
