--- a/templates/login.html
+++ b/templates/login.html
@@ -81,7 +81,8 @@
 </head>
 <body class="bg-light d-flex align-items-center vh-100">
   <div class="container">
-    <h2>Rebecca & Georg</h2>
+    <h2>🤍</h2>
+    <h2>REBECCA & GEORG</h2>
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         {% for category, message in messages %}
