--- a/templates/main.html
+++ b/templates/main.html
@@ -87,7 +87,7 @@
           map.classList.toggle('collapsed');
       }
   </script>
-
+<script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
 
 </body>
 </html>
