--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -78,6 +78,6 @@
       wrapper.classList.toggle("active");
     }
   </script>
-  
+  <script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
 </body>
 </html>
