--- a/templates/zusage.html
+++ b/templates/zusage.html
@@ -53,6 +53,6 @@
     
         <button type="submit" class="submit-button">💌 Absenden</button>
     </form>
-        
+    <script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>  
 </body>
 </html>
