--- a/templates/500.html
+++ b/templates/500.html
@@ -26,5 +26,6 @@
 {% endif %}
 
   <p><a href="/">Zurück zur Startseite</a></p>
+  <script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
 </body>
 </html>
