--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -28,8 +28,8 @@
 
     <!-- Ablauf -->
     <div class="section-mrb">
-      <p><br><br>WIR FREUEN UNS RIESIG AUF DICH!</p><br>
-      <h1>AGENDA</h1>
+      <br><br><h1>WIR FREUEN UNS RIESIG AUF DICH!</h1><br>
+      <h2>AGENDA</h2>
       <strong>23.05.2025</strong> <br>
       <p>12:00 UHR<br>
       🤍STANDESAMTLICHE TRAUUNG🤍<br>
