--- a/static/style.css
+++ b/static/style.css
@@ -107,7 +107,10 @@ a {
   margin:30px;
   }
 
-.section-mrb h1 {
+  .section-mrb h1 {
+    font-size: 24px;
+  }
+  .section-mrb h2 {
   font-size: 24px;
 }
 
@@ -138,22 +141,22 @@ a {
   border-radius: 0;
   text-decoration: none;
 }
-
-@media (max-width: 600px) {
-  .section h1 {
-    font-size: 1.5rem;
-  }
-
-  .section p {
-    font-size: 1rem;
-  }
-}
-
-@keyframes fadeInUp {
-  to { 
-    opacity: 1;
-    transform: translateY(0);
-  }
+.submit-button{
+  letter-spacing: 1px;
+  text-decoration: none;
+  padding: 12px 30px;
+  border-radius: 30px;
+  background-color: rgb(255, 255, 255);
+  color: #000000;
+  cursor: pointer;
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
+  min-width: 80px;
+  text-align: center;
+} 
+.submit-button:hover {
+  background-color: #E4F3FD;
+  color: #000000;
 }
 
 .rsvp-form {
@@ -187,71 +190,56 @@ a {
   font-family: inherit;
   box-sizing: border-box;
 }
-
-.radio-group label {
-  display: block;
-  margin-bottom: 0.4rem;
-  font-weight: normal;
-  padding: 0px;
-  margin: 0px;
+.centered-toggle {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 10px;
 }
 
-.submit-button {
-  background-color: #f08080;
-  color: white;
-  border: none;
-  padding: 0.7rem 1.2rem;
-  border-radius: 8px;
-  font-size: 1rem;
-  cursor: pointer;
-  font-family: inherit;
-  transition: background-color 0.2s ease;
+.button-toggle-group input[type="radio"] {
+  display: none;
 }
 
-.submit-button:hover {
-  background-color: #e66b6b;
+.button-toggle-group label {
+  padding: 6px 15px;
+  /*border: 2px solid #000000;*/
+  border-radius: 30px;
+  background-color: rgb(191, 191, 191);
+  color: #727272;
+  cursor: url('herzG.png'), auto;/*pointer;*/
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
+  min-width: 80px;
+  text-align: center;
+}
+
+.button-toggle-group input[type="radio"]:checked + label {
+  background-color: #E4F3FD;
+  color: rgb(0, 0, 0);
 }
 
 
-/* Google Maps responsive */
-.map-container {
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; /* 16:9 */
-  height: 0;
-  overflow: hidden;
-  border-radius: 8px;
-  box-shadow: 0 0 8px rgba(0,0,0,0.1);
-  transition: max-height 0.5s ease, padding-bottom 0.5s ease;
-  max-height: 1000px;
-  }
-  .map-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
+@media (max-width: 600px) {
+  .section h1 {
+    font-size: 1.5rem;
   }
 
-  /* Eingeklappt */
-  .map-container.collapsed {
-  padding-bottom: 0;
-  max-height: 0;
+  .section p {
+    font-size: 1rem;
   }
+}
+@media (max-width: 480px) {
+  .centered-toggle {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
-  .map-wrapper {
-    border: 1px solid transparent;
-    border-radius: 10px;
-    padding: 10px;
-    /*margin-bottom: 1.5rem;*/
-    transition: border 0.3s ease;
+
+@keyframes fadeInUp {
+  to { 
+    opacity: 1;
+    transform: translateY(0);
   }
-  
-  .map-wrapper.active {
-    border-color: #000000;
-  }
-  
-  .address-toggle {
-    cursor: pointer;
-  }
+}
