Admin seite errortesting

--- a/templates/login.html
+++ b/templates/login.html
@@ -62,7 +62,7 @@
     button.btn {
       display: block;
       margin: 0 auto;
-      width: 50%;
+      width: auto;
       padding: 0.75rem;
       font-size: 1rem;
       font-weight: 500;
@@ -105,7 +105,7 @@
         <input type="password" class="form-control" name="password" placeholder="Kennwort" required>
         <i class="fa-solid fa-eye toggle-password" onclick="togglePassword()" id="eye-icon" title="Passwort anzeigen/ausblenden"></i>
       </div>
-      <button type="submit" class="btn">🤍 Einloggen 🤍</button>
+      <button type="submit" class="btn">🤍Einloggen🤍</button>
     </form>
   </div>
 
