Admin seite errortesting

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Admin – Rückmeldungen</title>
+    <title>Brautpaar – Rückmeldungen</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <style>
         table {
@@ -36,7 +36,6 @@
 <body>
     <h1>💍 Rückmeldungen zur Hochzeit</h1>
 
-    <a href="{{ url_for('admin_csv_export') }}" class="export-button">📁 CSV Export</a>
 
     <table>
         <thead>
