Admin seite errortesting

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -36,7 +36,6 @@
 <body>
     <h1>💍 Rückmeldungen zur Hochzeit</h1>
 
-
     <table>
         <thead>
             <tr>
@@ -51,7 +50,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for eintrag in daten %}
+            {% for eintrag in rueckmeldungen %}
             <tr>
                 <td>{{ eintrag.name }}</td>
                 <td>{{ eintrag.email }}</td>
