--- a/templates/admin.html
+++ b/templates/admin.html
@@ -43,7 +43,7 @@
             text-align: center;
         }
         .footer a {
-            color: #cc6688;
+            color: #000000;
             text-decoration: none;
             font-weight: bold;
         }
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-    <h1>Rückmeldungen zur Hochzeit</h1>
+    <h1>💌Rückmeldungen zur Hochzeit💌</h1>
 
     <table>
         <thead>
