--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -38,7 +38,7 @@
       EMPFANG & MITTAGESSEN<br>
       GUTSSCHÄNKE MEERSBURG<br>
       SEMINARSTRASSE 4<br><br>
-      AB 16:00 UHR <br>SOIRÉE <br> VILLA AM SEE<br>
+      AB 16:00 UHR <br>🤍SOIRÉE🤍<br> VILLA AM SEE<br>
       UNTERUHLDINGER STR. 45, 88709 MEERSBURG<br><br>
       DRESSCODE: CHIC - NICHT FORMELL<br><br></p>
     <hr style="border-color: rgb(0, 0, 0);">
