Plausible in head

--- a/templates/404.html
+++ b/templates/404.html
@@ -15,6 +15,7 @@
     p  { font-size: 1.2em; }
     a  { color: #e65f82; text-decoration: none; }
   </style>
+  <script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
   <h1>404 – Seite nicht gefunden</h1>
