--- a/templates/reise.html
+++ b/templates/reise.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}" />
     <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}" />
     <link rel="manifest" href="{{ url_for('static', filename='favicon/site.webmanifest') }}" />
+    <script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
     <!-- Herz-Cursor & Musik -->
@@ -21,13 +22,17 @@
       <source src="{{ url_for('static', filename='Musik.mp3') }}" type="audio/mpeg">
   </audio>
   <!--Bisous-->
-  <div class="bisous-top"><strong>BISOUS</strong></div>
+  <div class="bisous-top"><strong>HOCHZEITSREISE</strong></div>
   <!--Hero GIF-->
   <div class="hero">
-      <img src="{{ url_for('static', filename='RuG.gif') }}" alt="Top Bild">
+      <img src="{{ url_for('static', filename='Japan.jpg') }}" alt="Top Bild">
   </div>
 
-
+<div class="section">
+    <p>Wir möchten uns dieses Jahr unseren langjährigen Wunsch erfüllen, Japan zu bereisen. </p>
+    <p>Dafür würden wir uns sehr über einen Beitrag in unsere Reisekasse freuen: <br><br> Rebecca Ivancevic und Georg von Gruben<br>DKB<br>IBAN: DE 0000 0000 0000 0000<br>BIC:xxxxxxxxxxx</p><br>
+    <p>Vielen Dank!<br>(˶˃ ᵕ ˂˶) .ᐟ.ᐟ</p>
+</div>
 
 
   <button id="musik-toggle" onclick="toggleMusik()">🔊</button>
@@ -48,7 +53,7 @@
       }
   </script>
   
-<script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
+
 
 </body>
 </html>
