--- a/templates/admin.html
+++ b/templates/admin.html
@@ -48,6 +48,7 @@
             font-weight: bold;
         }
     </style>
+    <script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
 
