--- a/templates/impressum.html
+++ b/templates/impressum.html
@@ -28,6 +28,7 @@
             color: #000000;
         }
     </style>
+<script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
     <h1>Impressum</h1>
